#updadate #create DataStreamService.ts create() needs a modification becausa SensorDeviceService getById was modified, then, new method getByIdSimple was created
